[tool.poetry]
name = "pms-tracker"
version = "0.1.0"
description = ""
authors = ["Lorenza Siciliani <lore.sici@gmail.com>"]
readme = "README.md"
packages = [{include = "pms_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
xlsxwriter = "^3.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
